--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
+/* Fonts */
+
+@font-face {
+    font-family: "Norse-Bold";
+    src: url("./fonts/Norse-Bold.otf");
+}
+
 /* Reset */
 
 *,
@@ -35,7 +42,178 @@ h5,
 h6 {
     overflow-wrap: break-word;
 }
+
 #root,
 #__next {
     isolation: isolate;
+}
+fieldset {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    min-width: 0;
+}
+
+main {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* Title section  */
+
+.title-container {
+    background-image: url("./images/vincent-guth-gD7KrKqYZFk-unsplash.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 30%;
+    position: relative;
+}
+
+.title-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.2rem;
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 100%;
+    padding: 0.5rem;
+    position: absolute;
+    top: 25%;
+}
+
+.title-label > img {
+    height: 7rem;
+}
+.title-label > h1 {
+    font-family: "Norse-Bold", Impact, Haettenschweiler, "Arial Narrow Bold",
+        sans-serif;
+    color: white;
+    font-size: 5rem;
+    font-weight: 400;
+}
+.img-credit {
+    position: absolute;
+    bottom: 2%;
+    width: 100%;
+    text-align: center;
+}
+
+.img-credit > p,
+.img-credit > p > a {
+    color: white;
+}
+
+/* Form Section */
+
+.form-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    width: 70%;
+    height: 100vh;
+    background-color: rgb(245, 245, 245);
+}
+.info-container {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    font-weight: 700;
+    gap: 2rem;
+    padding: 0 4rem;
+}
+.form-container {
+    width: 100%;
+}
+.form-fields {
+    background-color: white;
+    padding: 1rem 4rem 3rem 4rem;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.form-fields > p {
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.form-fields > form {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 1.5rem;
+}
+
+fieldset {
+    border: none;
+    display: flex;
+    justify-content: start;
+    gap: 5rem;
+}
+fieldset > div {
+    display: flex;
+    flex-direction: column;
+}
+fieldset > div > label {
+    font-size: 0.9rem;
+    color: rgb(86, 86, 86);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+
+fieldset > div > input {
+    width: 300px;
+    border: 1px solid gainsboro;
+    border-radius: 4px;
+    height: 2rem;
+    padding-left: 0.5rem;
+}
+fieldset > div > input:focus {
+    border: 1px solid blue;
+    outline: none;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+fieldset > div > input:invalid {
+    border: 1px solid red;
+}
+fieldset > div:has(#password:invalid)::after {
+    content: "*Passwords do not match";
+    color: red;
+    font-size: 1rem;
+    width: 100%;
+}
+.form-validation {
+    padding: 2rem 0 0 4rem;
+}
+
+.form-validation > button {
+    background-color: #487154;
+    color: white;
+    border: none;
+    padding: 0.7rem 3rem;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+    transition: 50ms ease-in-out;
+}
+.form-validation > button:active {
+    scale: 0.9;
+}
+
+.form-validation > p {
+    margin-top: 2rem;
+    font-size: 1rem;
+    font-weight: 700;
+}
+.form-validation > p > a {
+    text-decoration: none;
+    color: #487154;
 }
